# semaphore

./: .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish.yml  release.yml  test.yml
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst  requirements.txt
notebooks/: 20231011_sdss5_targeting.ipynb  20231011_sdss5_targeting_creation.ipynb
python/sdss_semaphore/: __init__.py  targeting.py
python/sdss_semaphore/etc/: sdss5_target_1_with_groups.csv  sdss5_target_2_with_groups.csv  sdss5_target_3_with_groups.csv  sdss5_target_4_with_groups.csv
python/semaphore/: __init__.py  array.py  exceptions.py  flags.py  flags_array.py  reference.py  types.py
tests/: test_flags.py  test_main.py
